2014-02-20  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y (unquotes_occur): Bugfix: we should not terminate
	the recursion early if we see a quote. This would be true if
	the only quotes were those generated by the parser based on
	calls to choose_quote. However, it breaks for something
	like an explicitly coded '(sys:quote ,form), which becomes
	(sys:quote (sys:quote ,form)), leaving a dangling unquote.

2014-02-19  Kaz Kylheku  <kaz@kylheku.com>

	* mpi-patches/faster-square-root (mp_sqrt): Bugfix: was computing square
	roots that were incorrect in the last digit/bit, because it was not
	generating the guess mask all the way down to bit zero. Also, added
	an early test to bail the loop when an the guess at the root happens
	to be right.

	* mpi-patches/add-bitops: Refreshed.

	* mpi-patches/fix-ctype-warnings: Likewise.

	* mpi-patches/mpi-to-double: Likewise.

2014-02-19  Kaz Kylheku  <kaz@kylheku.com>

	Fixing a long-running issue in the TXR pattern language: premature
	opening of files, prior to directives that actually need data.
	The documentation basically lied that this is the case: namely,
	the text "A file isn't opened until the query demands material from
	that file, and then the contents are read on demand, not all at
	once."   This is now a fact.

	* match.c (non_matching_directive_table): New global variable.
	(open_data_source): New static function. Contains an almost
	verbatim migration of the source-opening logic that used
	to be in match_files. The useless assignment to c->nil is gone,
	and c->data == t is explicitly tested for. Instead of assuming
	that only the @(next) directive does not need to have a data source
	open, the table of non-matching directives is consulted. Opening
	the data source is now skipped for numerous directives.
	(match_files): Call open_data_source within the loop. This
	means that even after processing numerous non-matching directives,
	we will still correctly set up the data lazy list.