@@ -1,5 +1,13 @@
 2014-02-20  Kaz Kylheku  <kaz@kylheku.com>
 
+	* eval.c (macro_form_p, macroexpand_1, macroexpand): New static
+	functions.
+	(eval_init): Registered new functions.
+
+	* txr.1: Documented.
+
+2014-02-20  Kaz Kylheku  <kaz@kylheku.com>
+
 	* parser.y (unquotes_occur): Bugfix: we should not terminate
 	the recursion early if we see a quote. This would be true if
 	the only quotes were those generated by the parser based on
